# agentic-ai-collections

./: .gitignore  README.md
Assignments/AlgoGenie/: app.py
Assignments/LangGraph/: Approach1.ipynb  Approach2.ipynb
Assignments/LangGraph-Corrective-RAG/: langgraph-corrective-rag.ipynb
Assignments/LangGraph-React/: LangGraph-React-Flow-Draft.ipynb  LangGraph-React-Flow.ipynb
Assignments/ML-Algorithm/: linear_regression.ipynb
Assignments/Multi-Agent-Research-Analyst/: .env.name  main.py  pyproject.toml  requirements.txt  setup.py
Assignments/Multi-Agent-Research-Analyst/agent/: agentic_workflow.py
Assignments/Multi-Agent-Research-Analyst/api/: rest_api.py
Assignments/Multi-Agent-Research-Analyst/config/: app_config.yaml
Assignments/Multi-Agent-Research-Analyst/domain/: app_router.py
Assignments/Multi-Agent-Research-Analyst/message/: app_message.py
Assignments/Multi-Agent-Research-Analyst/notebook/: experiment.ipynb
Assignments/Multi-Agent-Research-Analyst/prompt/: app_prompt.py
Assignments/Multi-Agent-Research-Analyst/tool/: search_tool.py
Assignments/Multi-Agent-Research-Analyst/ui/: ui_app.py
Assignments/Multi-Agent-Research-Analyst/util/: model_loader.py
Assignments/Pydantic/: Assignment.ipynb
Assignments/Sample-Agentic-App-Project/: main.py  pyproject.toml  requirements.txt  setup.py
Assignments/VectorDB/: VectorDB-Assignment.ipynb
workspace/: requirements-freeze.txt  requirements.txt
workspace/1-Pydantic/: pydantic.ipynb
workspace/2-Langchain-Basics/: gettingStartedLangchain.ipynb
workspace/3-LangGraph/: Assignment.ipynb  (+9 more)
(+49 files in other folders)
